# ChemicalAnalysisApp

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h
include/: DatabaseManager.h  mainwindow.h
sql/: seed_data.sql
src/: mainwindow.cpp
